Sudoku.h, Sudoku.hpp 拆分为 Sudoku.h 和 SudokuTable.h, SudokuTable.hpp
Signed-off-by: XiongHui Guo <gz_shines@msn.com>

--- a/projects/vc2015/gudoku/gudoku.vcxproj
+++ b/projects/vc2015/gudoku/gudoku.vcxproj
@@ -37,7 +37,8 @@
     <ClInclude Include="..\..\..\src\gudoku\stddef.h" />
     <ClInclude Include="..\..\..\src\gudoku\StopWatch.h" />
     <ClInclude Include="..\..\..\src\gudoku\Sudoku.h" />
-    <ClInclude Include="..\..\..\src\gudoku\Sudoku.hpp" />
+    <ClInclude Include="..\..\..\src\gudoku\SudokuTable.hpp" />
+    <ClInclude Include="..\..\..\src\gudoku\SudokuTable.h" />
     <ClInclude Include="..\..\..\src\gudoku\TestCase.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
