--- a/projects/vc2015/gudoku/gudoku.vcxproj
+++ b/projects/vc2015/gudoku/gudoku.vcxproj
@@ -28,18 +28,19 @@
     <ClInclude Include="..\..\..\src\gudoku\BitSet.h" />
     <ClInclude Include="..\..\..\src\gudoku\BitUtils.h" />
     <ClInclude Include="..\..\..\src\gudoku\BitVec.h" />
+    <ClInclude Include="..\..\..\src\gudoku\config.h" />
     <ClInclude Include="..\..\..\src\gudoku\CPUWarmUp.h" />
     <ClInclude Include="..\..\..\src\gudoku\DpllTriadSimdSolver.h" />
     <ClInclude Include="..\..\..\src\gudoku\gudoku.h" />
-    <ClInclude Include="..\..\..\src\gudoku\msvc_x86intrin.h" />
     <ClInclude Include="..\..\..\src\gudoku\PackedBitSet.h" />
-    <ClInclude Include="..\..\..\src\gudoku\PowerOf2.h" />
+    <ClInclude Include="..\..\..\src\gudoku\Power2.h" />
     <ClInclude Include="..\..\..\src\gudoku\stddef.h" />
     <ClInclude Include="..\..\..\src\gudoku\StopWatch.h" />
     <ClInclude Include="..\..\..\src\gudoku\Sudoku.h" />
     <ClInclude Include="..\..\..\src\gudoku\SudokuTable.hpp" />
     <ClInclude Include="..\..\..\src\gudoku\SudokuTable.h" />
     <ClInclude Include="..\..\..\src\gudoku\TestCase.h" />
+    <ClInclude Include="..\..\..\src\gudoku\x86_intrin.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{379F4E1A-674D-4464-9B00-F70708EE3B9D}</ProjectGuid>
